fix: reduce menu z-index and add position relative to header container

--- a/css/home.css
+++ b/css/home.css
@@ -85,6 +85,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .logo{
@@ -237,7 +238,7 @@
     position: fixed;
     top: 18px;
     right: 20px;
-    z-index: 100001;
+    z-index: 1001;
     padding: 10px;
   }
   .main-nav {
